moved ellipsis button to ChartCopmponent, fixed bucket alignment issue in heatmap, fixed compact height issue in legend

--- a/src/UXClient/Components/Heatmap/Heatmap.scss
+++ b/src/UXClient/Components/Heatmap/Heatmap.scss
@@ -41,13 +41,6 @@
         @include hmColors($grays);
     }
 
-    .tsi-chartControlsPanel {
-        top: 12px;
-        height: 28px;
-        .tsi-ellipsisContainerDiv {
-            right: 84px;
-        }
-    }
 
     .tsi-heatmapWrapper {
         position: absolute;
